--- a/style.css
+++ b/style.css
@@ -24,8 +24,7 @@
 
  .submit{
     margin: 15px auto 0 auto;
-    width: 50%;
-    padding: auto;
+    width: 30%;
     background-color: aqua;
     border-radius: 5px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -38,4 +37,9 @@
     margin: auto;
     border: 2px solid black;
     padding: 15px;
+ }
+ 
+ .g-recaptcha{
+    display: flex;
+    justify-content: center;
  }
